--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,17 @@
   <body>
     <div class="ui container">
       <h1>Asset List</h1>
+
+      <form method="GET">
+        <select name="filter">
+          <option value="">All Stocks</option>
+          <option value="new_intraday_highs">New Intraday Highs</option>
+          <option value="new_closing_highs">New Closing Highs</option>
+          <option value="new_intraday_lows">New Intraday Lows</option>
+          <option value="new_closing_lows">New Closing Lows</option>
+        </select>
+        <input type="submit">
+      </form>
       <table class="ui inverted table">
         <thead>
           <tr>
