--- a/templates/stock.html
+++ b/templates/stock.html
@@ -7,7 +7,32 @@
 <h1>{{ stock.symbol }}</h1>
 <h3>{{ stock.name }}</h3>
 
-  <table class="ui inverted table">
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_10a7a"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 1127,
+  "height": 610,
+  "symbol": "{{ stock.exchange }}:{{ stock.symbol }}",
+  "interval": "D",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "en",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_10a7a"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
+
+  <table class="ui inverted table c">
     <thead>
       <tr>
         <th>Date</th>
